dashboard estatica ajustes

--- a/projeto-site/public/Dashboard/index.html
+++ b/projeto-site/public/Dashboard/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <title>Sidebar sub menus</title>
+
 </head>
 
 <body id="body-pd">
@@ -60,10 +61,16 @@
     <section class="graphicsContainer">
         <div class="graphics">
             <section class="graphicsCont">
-                <section>G1</section>
-                <section>G2</section>
-                <section>G3</section>
-                <section>G4</section>
+                <section>
+                    <img src="../Imagens/disco.png" width="870px" height="375" alt="" class="imagem">
+                </section>
+                <section>
+                    <img src="../Imagens/CPU.png" width="870px" height="375" alt="" class="imagem">
+                </section>
+              
+            </section>
+            <section class="graphicRam">
+                <img src="../Imagens/RAM.png" width="870px" height="375" alt="" class="imagem">
             </section>
         </div>
 
