login linkado na dash

--- a/projeto-site/public/Login.html
+++ b/projeto-site/public/Login.html
@@ -47,7 +47,7 @@
     <div class="imgPrincipal">
         <div class="login">
             <h2>LOGIN NO SISTEMA</h2><br>
-                <form id="form_login" method="post" onsubmit="return entrar()">
+                <!-- <form id="form_login" method="post" onsubmit="return entrar()"> -->
                     <p>E-mail</p>
                     <br>
                     <input name="login" placeholder="Ex:fadesolutions@gmail.com">
@@ -56,7 +56,7 @@
                     <br>              
                     <input name="senha" placeholder="Ex:123456">
                     <br>
-                    <a href="Dashboard/index.html"><button type="submit">Login</button></a>
+                    <a href="../public/Dashboard/index.html"><button type="submit">Login</button></a>
                     <div class="divSenha">
                     <br>
                     <button type="submit">Esqueceu a senha?</button>
