Modificacoes de texto para aprensentação da Sprint

--- a/projeto-site/public/Dashboard/index.html
+++ b/projeto-site/public/Dashboard/index.html
@@ -8,7 +8,7 @@
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Sidebar sub menus</title>
+    <title>Área do Cliente</title>
 
 </head>
 
