--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -73,7 +73,7 @@
           <img src="../public/Imagens/aperto-de-mao (1).png" alt="" width="164px" />
         </div>
         <p>
-         Ao fecharmos negócio a instalação do sistema e a parceiria começará
+         Ao fecharmos negócio a instalação do sistema e a parceria começará
          o mais rápido o possível, e estaremos sempre em contato e disponíveis
          para manutenção e atualizações do sistema
         </p>
@@ -83,7 +83,7 @@
           <img src="../public/Imagens/gostar.png" alt="" width="138px"/>
         </div>
         <p>
-          Assim que nossos sitemas estiverem funcionando, os bons resultados
+          Assim que nossos sistemas estiverem funcionando, os bons resultados
           começarão a aparecer, os clientes certamente ficarão mais satisfeitos
           e seguros sabendo que dificilmente seu pedido irá atrasar ou que pegará
           filas gigantescas por falhas no sistema.
