--- a/projeto-site/public/Cadastro.html
+++ b/projeto-site/public/Cadastro.html
@@ -53,16 +53,16 @@
                     <input name="nome">
                     <p>E-mail</p>
                     <input name="login">
-                    <p>Celular</p>
+                    <!-- <p>Celular</p>
                     <input name="celular" placeholder="00 00000-0000">
                     <p>CPF</p>
                     <input name="cpf" placeholder="000.000.000-00">
-                    <p>Cargo na empresa</p>
-                    <input name="cargo">
+                    <p>Cargo na empresa</p> -->
+                    <!-- <input name="cargo"> -->
                     <p>Senha</p>
                     <input name="senha" type="password">
-                    <p>Código da empresa</p>
-                    <input name="loja">
+                    <!-- <p>Código da empresa</p>
+                    <input name="loja"> -->
                     <button type="submit">CADASTRAR</button>
                 </form>
         </div>
