--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../public/css/Index.css" />
-    <link rel="sortcut icon" href="../public/Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/Index.css" />
+    <link rel="sortcut icon" href="./Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
     <title>Fade solutions</title>
   </head>
   <body>
     <!-- NAVBAR -->
     <header>
       <img
-      src="../public/Imagens/Logotipo - Grupo 10.png"
+      src="./Imagens/Logotipo - Grupo 10.png"
       alt="logo"
       class="logo"
       width="170px"
@@ -27,13 +27,13 @@
           
         </ul>
       </nav>
-      <a class="cta" href="../public/Login.html"><button>Entrar</button></a>
+      <a class="cta" href="./Login.html"><button>Entrar</button></a>
     </header>
     <!-- NAVBAR -->
     <!-- BANNER -->
     <section>
       <div class="banner">
-        <img src="../public/Imagens/giphy.gif" />
+        <img src="./Imagens/icon_and_graphics_2.gif" />
         <h1></h1>
       </div>
     </section>
@@ -61,7 +61,7 @@
     <section class="secConteudo" id="secConteudo">
       <div class="divDinheiro">
         <div class="divJoinhaImg">
-          <img src="../public/Imagens/money1.png" alt="" width="138px">
+          <img src="./Imagens/money1.png" alt="" width="138px">
         </div>
         <p>
          Nossa solução lhe beneficia muito financeiramente, reduzindo
@@ -70,7 +70,7 @@
       </div>
       <div class="divMaozinha">
         <div class="divJoinhaImg">
-          <img src="../public/Imagens/aperto-de-mao (1).png" alt="" width="164px" />
+          <img src="./Imagens/aperto-de-mao (1).png" alt="" width="164px" />
         </div>
         <p>
          Ao fecharmos negócio a instalação do sistema e a parceria começará
@@ -80,7 +80,7 @@
       </div>
       <div class="divJoinha">
         <div class="divJoinhaImg">
-          <img src="../public/Imagens/gostar.png" alt="" width="138px"/>
+          <img src="./Imagens/gostar.png" alt="" width="138px"/>
         </div>
         <p>
           Assim que nossos sistemas estiverem funcionando, os bons resultados
@@ -98,7 +98,7 @@
     <!-- FOOTER -->
     <header>
       <img
-        src="../public/Imagens/Logotipo - Grupo 10.png"
+        src="./Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="200px"
@@ -109,7 +109,7 @@
           <li>
             <a href="#"
               ><img
-                src="../public/Imagens/instagram.png"
+                src="./Imagens/instagram.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -117,7 +117,7 @@
           <li>
             <a href="#"
               ><img
-                src="Imagens/logo-do-facebook.png"
+                src="./Imagens/logo-do-facebook.png"
                 width="50px"
                 height="50px"
             /></a>
@@ -125,7 +125,7 @@
           <li>
             <a href="#"
               ><img
-                src="../public/Imagens/linkedin.png"
+                src="./Imagens/linkedin.png"
                 width="50px"
                 height="50px"
             /></a>
