--- a/projeto-site/public/Sobre.html
+++ b/projeto-site/public/Sobre.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="sortcut icon" href="./Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
     <link rel="stylesheet" href="./css/Index.css" />
     <link rel="stylesheet" href="./css/sobre.css" />
 
@@ -13,7 +14,7 @@
     <!-- NAVBAR -->
     <header>
       <img
-      src="../public/Imagens/Logotipo - Grupo 10.png"
+      src="./Imagens/Logotipo - Grupo 10.png"
       alt="logo"
       class="logo"
       width="170px"
@@ -22,8 +23,8 @@
       <nav>
         <ul class="nav-links">
           <li><a href="Index.html">Serviço</a></li>
-          <li><a href="#secConteudo">Solução</a></li>
-          <li><a href="#">Sobre nos</a></li>
+          <li><a href="Index.html">Solução</a></li>
+          <li><a href="Sobre.html">Sobre nos</a></li>
           <li><a href="Contato.html">Contato</a></li>    
         </ul>
     </nav>
@@ -39,7 +40,7 @@
    
 <div class="item">
     <div class="Devs">
-        <img src="../public/Imagens/perfil.jpg">
+        <img src="./Imagens/perfil.jpg">
     </div>
     <div class="descricao">
         <h1>Gabriel Ortelan</h1>
@@ -49,7 +50,7 @@
 
 <div class="item">
     <div class="Devs">
-        <img src="../public/Imagens/perfil.jpg">
+        <img src="./Imagens/perfil.jpg">
     </div>
     <div class="descricao">
         <h1>Luiz berto</h1>
@@ -60,7 +61,7 @@
 <div class="integrantes">
 <div class="item">
     <div class="Devs">
-        <img src="../public/Imagens/perfil.jpg">
+        <img src="./Imagens/perfil.jpg">
     </div>
     <div class="descricao">
         <h1>Wilgner Guilherme</h1>
@@ -70,7 +71,7 @@
 
 <div class="item">
     <div class="Devs">
-        <img src="../public/Imagens/perfil.jpg">
+        <img src="./Imagens/perfil.jpg">
     </div>
     <div class="descricao">
         <h1>Sergio Trindade</h1>
@@ -81,7 +82,7 @@
 
 <div class="item">
     <div class="Devs">
-        <img src="../public/Imagens/perfil.jpg">
+        <img src="./Imagens/perfil.jpg">
     </div>
     <div class="descricao">
         <h1>Guilherme Soares</h1>
