--- a/projeto-site/public/contato.html
+++ b/projeto-site/public/contato.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="./css/contato.css">
+    <link rel="sortcut icon" href="./Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
     <title>Contato</title>
 </head>
 <body>
     <header>
         <a href="Index.html">
         <img
-        src="../public/Imagens/Logotipo - Grupo 10.png"
+        src="./Imagens/Logotipo - Grupo 10.png"
         alt="logo"
         class="logo"
         width="170px"
@@ -27,7 +28,7 @@
             <li><a href="Contato.html">Contato</a></li>
           </ul>
         </nav>
-        <a class="cta" href="../public/Login.html"><button>Entrar</button></a>
+        <a class="cta" href="./Login.html"><button>Entrar</button></a>
       </header>
       <br><br><br><br><br><br>
     <div class="divContato">
