atualização da tela de login sem conexão

--- a/projeto-site/public/Cadastro.html
+++ b/projeto-site/public/Cadastro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro - Fade</title>
     <link rel="stylesheet" href="./css/cadastro.css">
-    <link rel="stylesheet" href="./css/Index.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="sortcut icon" href="./Imagens/icon_and_graphics_2.gif" type="image/x-icon" />
 
 </head>
