--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Nunito:ital,wght@1,700&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/cadastro.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
         <ul>
             <li><a href="Login.html">Login</a></li>
             <li><a href="Cadastro.html">Cadastro</a></li>
-            <li><a href="#solução">cadastro</a></li>
+            <li><a href="#solução">Solução</a></li>
             <li><a href="#serviço">contato</a></li>
         </ul>
     </nav>
