alterações na dash

--- a/site-modelo/projeto-site/public/index.html
+++ b/site-modelo/projeto-site/public/index.html
@@ -139,7 +139,7 @@
         margin: 0;
     }
     .select {
-        border: 2px solid #793FFF;
+        border: 2px solid orangered;;
         padding: 11px;
         font-size: 1rem;
         font-size: 1rem;
@@ -149,7 +149,7 @@
         padding-right: 57px;
         padding-left: 55px;
         cursor: pointer;
-        box-shadow: 3px 4px #793fff;
+        box-shadow: 3px 4px orangered;;
         outline: none;
     }
     .togle > i {
@@ -162,7 +162,7 @@
     #selectMenu {
         width: 200px;
         background-color: transparent;
-        border: 2px solid #793FFF;
+        border: 2px solid orangered;;
         text-align: center;
         margin-top: 2px;
         margin-top: 4px;
@@ -181,7 +181,7 @@
         transition: 0.3s;
         background-color: black;
         color: white;
-        border-left: 8px solid #793FFF;
+        border-left: 8px solid orangered;
         box-sizing: content-box;
     }
    
@@ -196,15 +196,15 @@
         font-size: 1rem;
         color: white;
         border: black 2px solid;
-        box-shadow: 4px 6px #793FFF;
+        box-shadow: 4px 6px orangered;
         transition: 0.5s;
         animation: teste 1s ease;
     }
     .button:hover, .select:hover{
         cursor: pointer;
-        background-color: #8551ff;
+        background-color: orangered;
         color: white;
-        border: #8551ff 2px solid;
+        border: orangered; 2px solid;
         box-shadow: 4px 6px black;
         transition: 0.5s;
     }
@@ -229,7 +229,7 @@
         background-color: transparent;
         border: none;
         color: black;
-        border-bottom: 2px solid #793FFF;
+        border-bottom: 2px solid orangered;
         z-index: 1;
     }
     
