--- a/projeto-site/public/login/login.html
+++ b/projeto-site/public/login/login.html
@@ -155,7 +155,7 @@ function entrar() {
                 sessionStorage.login_usuario_meuapp = json.login;
                 sessionStorage.nome_usuario_meuapp = json.nome;
 
-                window.location.href = '../Dashboard/Dashboard.html';
+                window.location.href = '../tabelaComputador.html';
             });
 
         } else {
