--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -18,8 +18,7 @@
         </a>
 
         <ul>
-            <li><a href="./login/login.html">Login</a></li>
-            <li><a href="./login/login.html">Cadastro</a></li>
+            <li><a href="./login/login.html">Entrar</a></li>
             <li><a href="#solução">Solução</a></li>
             <li><a href="#serviço">contato</a></li>
         </ul>
