--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="./login/login.html">Entrar</a></li>
             <li><a href="#solução">Solução</a></li>
-            <li><a href="https://join.slack.com/share/zt-rplaq92u-pN4TurTdpMJoVI1eiBlABA">contato</a></li>
+            <li><a href="https://join.slack.com/share/zt-rplaq92u-pN4TurTdpMJoVI1eiBlABA">Contato</a></li>
         </ul>
     </nav>
 
