--- a/projeto-site/public/Index.html
+++ b/projeto-site/public/Index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/cadastro.css">
-    <title>Document</title>
+    <title>Fade Solutions</title>
 </head>
 <body>
     <nav>
@@ -19,7 +19,7 @@
 
         <ul>
             <li><a href="./login/login.html">Entrar</a></li>
-            <li><a href="#solução">Solução</a></li>
+            <li><a href="#serviços">Serviços</a></li>
             <li><a href="https://join.slack.com/share/zt-rplaq92u-pN4TurTdpMJoVI1eiBlABA">Contato</a></li>
         </ul>
     </nav>
@@ -42,7 +42,7 @@
     </section>
 
     <section id="serviços">
-        <h2>serviço</h2>
+        <h2>Serviço</h2>
 
         <div>
             <img src="img/aperto-de-mao.png" width="100px"  alt="">
